Pagina Items Completas

--- a/telas/battleInfo.html
+++ b/telas/battleInfo.html
@@ -18,7 +18,7 @@
     <div class="header-main" data-main>
       <div class="header-generation" data-generation>
         <div class="header-background">
-          <p class="header-game" data-game><a href=../home.html>Home</a></p>
+          <p class="header-game" data-game><a href=./home.html>Home</a></p>
         </div>
       </div>
       <div class="header-generation" data-generation>
