--- a/telas/home.html
+++ b/telas/home.html
@@ -3,11 +3,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/header/header.css">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main/main.css">
-  <link rel="stylesheet" href="css/main/mediaQuery.css">
-  <link rel="stylesheet" href="css/header/mediaQuery.css">
+  <link rel="stylesheet" href="../css/header/header.css">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/main/main.css">
+  <link rel="stylesheet" href="../css/main/mediaQuery.css">
+  <link rel="stylesheet" href="../css/header/mediaQuery.css">
   <title>Pagina inicial</title>
 </head>
 <body>
@@ -20,12 +20,12 @@
       </div>
       <div class="header-generation" data-generation>
         <div class="header-background">
-          <p class="header-game" data-game><a href="telas/battleInfo.html">Battle Info</a></p>
+          <p class="header-game" data-game><a href="./battleInfo.html">Battle Info</a></p>
         </div>
       </div>
       <div class="header-generation" data-generation>
         <div class="header-background">
-          <p class="header-game" data-game><a href="#">Items</a></p>
+          <p class="header-game" data-game><a href="./items.html">Items</a></p>
         </div>
       </div>
       <div class="header-generation" data-generation>
@@ -87,6 +87,4 @@
   </main>
 </body>
 <script src="https://kit.fontawesome.com/407f74df21.js"></script>
-<script src="javascript/showGames.js"></script>
-<!-- <script src="javascript/hideGames.js"></script> -->
 </html>
