--- a/telas/pokedex.html
+++ b/telas/pokedex.html
@@ -61,10 +61,11 @@
     </div>
     <div class="main-search">
       <form class="main-form">
-        <label for="write" class="main-pokemonSearch"></label>
-        <input name="write" type="text" class="main-searchType" placeholder="Write Pokemon Name">
+        <label name="nome" class="main-pokemonSearch"></label>
+        <input for="nome" name="write" type="text" class="main-searchType" data-searchBar placeholder="Write Pokemon Name">
+
         <label for="type" class="main-typeList"></label>
-        <input class="main-pokemonTypeSearch" list="types" name="type" id="type" placeholder="Select Pokemon Type">
+        <input data-pokemonType class="main-pokemonTypeSearch" list="types" name="type" id="type" placeholder="Select Pokemon Type">
         <datalist id="types" class="main-pokemonTypeDataList">
           <option value="Grass">
           <option value="Fire">
@@ -82,7 +83,8 @@
           <option value="Bug">
           <option value="Rock">
         </datalist>
-        <button class="main-searchButton" type="button" name="button">Search</button>
+
+        <button class="main-searchButton" type="button" name="button" data-button>Search</button>
       </form>
     </div>
     <div class="main-pokedex">
@@ -1664,5 +1666,6 @@
   </main>
   <script src="../javascript\fontColor.js"></script>
   <script src="../javascript\indexAdd.js"></script>
+  <script src="../javascript\searchBar.js"></script>
 </body>
 </html>
