--- a/telas/battleInfo.html
+++ b/telas/battleInfo.html
@@ -38,7 +38,7 @@
       </div>
       <div class="header-generation" data-generation>
         <div class="header-background">
-          <p class="header-game" data-version>Games</p>
+          <p class="header-game" data-version><a href="./games.html">Games</a></p>
         </div>
       </div>
       <div class="header-generation" data-generation>
