--- a/telas/games.html
+++ b/telas/games.html
@@ -43,7 +43,7 @@
       </div>
       <div class="header-generation" data-generation>
         <div class="header-background">
-          <p class="header-game" data-game><a href="#">My Team</a></p>
+          <p class="header-game" data-game><a href="./myteam.html">My Team</a></p>
         </div>
       </div>
     </div>
@@ -131,5 +131,5 @@
   </main>
 </body>
 <script src="https://kit.fontawesome.com/407f74df21.js"></script>
-<script src="../telas/hideGames.js"></script>
+<script src="../javascript/hideGames.js"></script>
 </html>
