--- a/telas/pokedex.html
+++ b/telas/pokedex.html
@@ -44,7 +44,7 @@
       </div>
       <div class="header-generation" data-generation>
         <div class="header-background">
-          <p class="header-game" data-game><a href="#">My Team</a></p>
+          <p class="header-game" data-game><a href="./myteam.html">My Team</a></p>
         </div>
       </div>
     </div>
