--- a/telas/home.html
+++ b/telas/home.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,45 +11,45 @@
   <link rel="stylesheet" href="../css/header/mediaQuery.css">
   <title>Pagina inicial</title>
 </head>
+
 <body>
   <header class="header">
     <div class="header-main" data-main>
       <div class="header-generation" data-generation>
         <div class="header-background">
-          <p class="header-game" data-game><a href=./home.html>Home</a></p>
+          <p class="header-game" data-game><a href=./home.html>Home </a> </p> </div> </div> <div
+              class="header-generation" data-generation>
+              <div class="header-background">
+                <p class="header-game" data-game><a href="./battleInfo.html">Battle Info</a></p>
+              </div>
+        </div>
+        <div class="header-generation" data-generation>
+          <div class="header-background">
+            <p class="header-game" data-game><a href="./items.html">Items</a></p>
+          </div>
+        </div>
+        <div class="header-generation" data-generation>
+          <div class="header-background">
+            <p class="header-game" data-game><a href="./pokedex.html">Pokedex</a></p>
+          </div>
+        </div>
+        <div class="header-generation" data-generation>
+          <div class="header-background">
+            <p class="header-game" data-version><a href="./games.html">Games</a></p>
+          </div>
+        </div>
+        <div class="header-generation" data-generation>
+          <div class="header-background">
+            <p class="header-game" data-game><a href="./myteam.html">My Team</a></p>
+          </div>
         </div>
       </div>
-      <div class="header-generation" data-generation>
-        <div class="header-background">
-          <p class="header-game" data-game><a href="./battleInfo.html">Battle Info</a></p>
-        </div>
-      </div>
-      <div class="header-generation" data-generation>
-        <div class="header-background">
-          <p class="header-game" data-game><a href="./items.html">Items</a></p>
-        </div>
-      </div>
-      <div class="header-generation" data-generation>
-        <div class="header-background">
-          <p class="header-game" data-game><a href="./pokedex.html">Pokedex</a></p>
-        </div>
-      </div>
-      <div class="header-generation" data-generation>
-        <div class="header-background">
-          <p class="header-game" data-version><a href="./games.html">Games</a></p>
-        </div>
-      </div>
-      <div class="header-generation" data-generation>
-        <div class="header-background">
-          <p class="header-game" data-game><a href="./myteam.html">My Team</a></p>
-        </div>
-      </div>
-    </div>
   </header>
   <main class="main">
     <div class="main-header">
       <h2 class="main-title">Pokemon Database</h2>
-      <p class="main-introduction">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis congue condimentum.
+      <p class="main-introduction">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis congue
+        condimentum.
         Nunc fringilla augue in metus consectetur, quis imperdiet magna elementum. Vestibulum varius
         dictum nisi at egestas. Sed viverra nunc erat, sed pharetra metus congue sit amet. Proin sed
         dictum dui, nec euismod erat. Morbi congue varius lacus sit amet semper. Phasellus facilisis nisi
@@ -56,35 +57,48 @@
       </p>
     </div>
     <div class="main-content">
-      <h2 class="main-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel arcu a purus condimentum tempor</h2>
+      <h2 class="main-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel arcu a purus
+        condimentum tempor</h2>
       <div class="main-news">
         <p class="main-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel arcu a purus condimentum tempor. Sed euismod
-          felis sit amet placerat varius. Vestibulum non ligula sapien. Pellentesque ullamcorper euismod ipsum, et commodo turpis
-          condimentum non. Nam tempus, arcu quis dignissim tristique, lectus lacus ullamcorper felis, ut pretium magna ex nec arcu.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel arcu a purus condimentum tempor. Sed
+          euismod
+          felis sit amet placerat varius. Vestibulum non ligula sapien. Pellentesque ullamcorper euismod ipsum, et
+          commodo turpis
+          condimentum non. Nam tempus, arcu quis dignissim tristique, lectus lacus ullamcorper felis, ut pretium magna
+          ex nec arcu.
         </p>
-        <iframe class="main-video"width="55%" height="300px" src="https://www.youtube.com/embed/SuV3bEYQWeg"></iframe>
+        <iframe class="main-video" width="55%" height="300px" src="https://www.youtube.com/embed/SuV3bEYQWeg"></iframe>
       </div>
-      <h2 class="main-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel arcu a purus condimentum tempor</h2>
+      <h2 class="main-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel arcu a purus
+        condimentum tempor</h2>
       <div class="main-news">
         <p class="main-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel arcu a purus condimentum tempor. Sed euismod
-          felis sit amet placerat varius. Vestibulum non ligula sapien. Pellentesque ullamcorper euismod ipsum, et commodo turpis
-          condimentum non. Nam tempus, arcu quis dignissim tristique, lectus lacus ullamcorper felis, ut pretium magna ex nec arcu.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel arcu a purus condimentum tempor. Sed
+          euismod
+          felis sit amet placerat varius. Vestibulum non ligula sapien. Pellentesque ullamcorper euismod ipsum, et
+          commodo turpis
+          condimentum non. Nam tempus, arcu quis dignissim tristique, lectus lacus ullamcorper felis, ut pretium magna
+          ex nec arcu.
         </p>
-        <iframe class="main-video"width="55%" height="300px" src="https://www.youtube.com/embed/xM24hiwTAe8"></iframe>
+        <iframe class="main-video" width="55%" height="300px" src="https://www.youtube.com/embed/xM24hiwTAe8"></iframe>
       </div>
-      <h2 class="main-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel arcu a purus condimentum tempor</h2>
+      <h2 class="main-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel arcu a purus
+        condimentum tempor</h2>
       <div class="main-news">
         <p class="main-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel arcu a purus condimentum tempor. Sed euismod
-          felis sit amet placerat varius. Vestibulum non ligula sapien. Pellentesque ullamcorper euismod ipsum, et commodo turpis
-          condimentum non. Nam tempus, arcu quis dignissim tristique, lectus lacus ullamcorper felis, ut pretium magna ex nec arcu.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel arcu a purus condimentum tempor. Sed
+          euismod
+          felis sit amet placerat varius. Vestibulum non ligula sapien. Pellentesque ullamcorper euismod ipsum, et
+          commodo turpis
+          condimentum non. Nam tempus, arcu quis dignissim tristique, lectus lacus ullamcorper felis, ut pretium magna
+          ex nec arcu.
         </p>
-        <iframe class="main-video"width="55%" height="300px" src="https://www.youtube.com/embed/Bi98Wd17Z5Q"></iframe>
+        <iframe class="main-video" width="55%" height="300px" src="https://www.youtube.com/embed/Bi98Wd17Z5Q"></iframe>
       </div>
     </div>
   </main>
 </body>
 <script src="https://kit.fontawesome.com/407f74df21.js"></script>
+
 </html>
