--- a/telas/myteam.html
+++ b/telas/myteam.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta https-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/header/header.css">
   <link rel="stylesheet" href="../css/main/main.css">
